--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -19,7 +19,7 @@
             android:id="@+id/img_id"
             android:layout_width="200dp"
             android:layout_height="280dp"
-
+            android:contentDescription="Movie Poster"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
