--- a/app/src/main/res/layout/list_tvshows.xml
+++ b/app/src/main/res/layout/list_tvshows.xml
@@ -21,6 +21,7 @@
             android:layout_height="150dp"
             android:layout_marginStart="4dp"
             android:scaleType="fitXY"
+            android:contentDescription="TV Poster"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:src="@drawable/poster_a_start_is_born" />
