--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,6 +6,10 @@
         android:title="@string/settings"
         app:showAsAction="never"
         >
-
+    </item>
+    <item
+        android:id="@+id/action_about"
+        android:title="About Me"
+        app:showAsAction="never">
     </item>
 </menu>
