--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -18,4 +18,9 @@
             >
 
         </item>
+        <item
+            android:id="@+id/action_about"
+            android:title="About Me"
+            app:showAsAction="never">
+        </item>
 </menu>
