--- a/app/src/main/res/layout/detail_tvshows.xml
+++ b/app/src/main/res/layout/detail_tvshows.xml
@@ -1,45 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#000"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="#F7F7F7"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:paddingBottom="@dimen/activity_vertical_margin">
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        >
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
         <ImageView
-            android:id="@+id/img_id"
-            android:layout_width="200dp"
-            android:layout_height="280dp"
-            android:contentDescription="TV Poster"
+            android:id="@+id/backdrop_id"
+            android:layout_width="match_parent"
+            android:layout_height="165dp"
+            android:contentDescription="backdrop poster"
             android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:src="@drawable/poster_a_start_is_born"
+            android:tint="@color/poster_banner_tint"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/poster_a_start_is_born" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardviewPosterDetail"
+            android:layout_width="120dp"
+            android:layout_height="170dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="138dp"
+            android:layout_marginBottom="8dp"
+            app:cardCornerRadius="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/backdrop_id"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/backdrop_id"
+            app:layout_constraintTop_toTopOf="@+id/backdrop_id"
+            app:layout_constraintVertical_bias="0.0">
+
+            <ImageView
+                android:id="@+id/img_id"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Poster"
+                android:scaleType="fitXY"
+                tools:src="@android:color/darker_gray" />
+        </android.support.v7.widget.CardView>
 
         <TextView
             android:id="@+id/title_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="220dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="10dp"
 
-            android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="20sp"
+            android:textColor="#fff"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/backdrop_id"
             tools:text="@string/test" />
 
         <TextView
@@ -47,11 +70,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title_id"
-            android:layout_marginStart="220dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="18sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/language_id"
             tools:text="@string/test" />
@@ -61,11 +83,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title_id"
-            android:layout_marginStart="220dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="10dp"
-            android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="18sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/startDate_id"
             tools:text="@string/test" />
@@ -74,10 +95,10 @@
             android:id="@+id/rating_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="220dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="10dp"
-            android:textColor="#000000"
-            android:textSize="18sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pop_id"
             tools:text="@string/test" />
@@ -86,10 +107,10 @@
             android:id="@+id/language_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="220dp"
+            android:layout_marginStart="160dp"
             android:layout_marginTop="10dp"
-            android:textColor="#000000"
-            android:textSize="18sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/startDate_id"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_id"
@@ -99,11 +120,13 @@
             android:id="@+id/desc_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:textColor="#000000"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/img_id"
-            tools:layout_editor_absoluteX="0dp"
+
+            android:layout_marginTop="30dp"
+            android:textColor="#fff"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardviewPosterDetail"
             tools:text="@string/test" />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
