--- a/app/src/main/res/layout/list_movies.xml
+++ b/app/src/main/res/layout/list_movies.xml
@@ -4,22 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:orientation="vertical">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/cardView"
         android:layout_margin="5dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="8dp"
         >
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         >
+
         <ImageView
             android:id="@+id/img_id"
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="150dp"
-            android:layout_marginStart="4dp"
+
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:scaleType="fitXY"
             android:contentDescription="Movie Poster"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -30,9 +36,10 @@
             android:id="@+id/title_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="170dp"
+
+            android:layout_marginStart="135dp"
             android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
 
             android:textSize="18sp"
             android:textStyle="bold"
@@ -46,10 +53,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title_id"
-            android:layout_marginStart="170dp"
+            android:layout_marginStart="135dp"
             android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="15sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toEndOf="@+id/img_id"
             app:layout_constraintTop_toBottomOf="@+id/title_id"
@@ -58,7 +65,6 @@
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginStart="9dp"
             android:layout_marginBottom="25dp"
             android:src="@drawable/ic_star_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -70,9 +76,10 @@
             android:id="@+id/rating_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="188dp"
+            android:layout_marginStart="160dp"
             android:layout_marginBottom="4dp"
-            android:textColor="#000000"
+            android:textColor="#fff"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Test" />
@@ -85,14 +92,7 @@
             android:src="@drawable/ic_more_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_gravity="center"
-            android:background="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
