--- a/app/src/main/res/layout/list_tvshows.xml
+++ b/app/src/main/res/layout/list_tvshows.xml
@@ -9,17 +9,24 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/cardView"
         android:layout_margin="5dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="100dp"
+
         >
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        >
 
         <ImageView
             android:id="@+id/img_id"
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="150dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="12dp"
             android:scaleType="fitXY"
             android:contentDescription="TV Poster"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -30,9 +37,9 @@
             android:id="@+id/title_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="165dp"
+            android:layout_marginStart="135dp"
             android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
+            android:textColor="#fff"
             android:textSize="18sp"
             android:textStyle="bold"
 
@@ -45,10 +52,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/title_id"
-            android:layout_marginStart="165dp"
+            android:layout_marginStart="135dp"
             android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="14sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/title_id"
@@ -59,10 +66,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/startDate_id"
-            android:layout_marginStart="165dp"
+            android:layout_marginStart="135dp"
             android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="14sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/startDate_id"
@@ -71,7 +78,6 @@
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_marginStart="9dp"
             android:layout_marginBottom="25dp"
             android:src="@drawable/ic_star_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -83,21 +89,23 @@
             android:id="@+id/rating_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="188dp"
-            android:textColor="#000000"
+            android:layout_marginStart="160dp"
             android:layout_marginBottom="4dp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="Test" />
+
         <TextView
             android:id="@+id/pop_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/language_id"
-            android:layout_marginStart="165dp"
+            android:layout_marginStart="135dp"
             android:layout_toEndOf="@+id/img_id"
-            android:textColor="#000000"
-            android:textSize="14sp"
+            android:textColor="#fff"
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/language_id"
@@ -116,14 +124,7 @@
             app:layout_constraintTop_toBottomOf="@+id/pop_id"
             app:layout_constraintVertical_bias="1.0" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_gravity="center"
-            android:background="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </ScrollView>
