--- a/app/src/main/res/layout/detail_movies.xml
+++ b/app/src/main/res/layout/detail_movies.xml
@@ -4,29 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView2"
     android:layout_width="match_parent"
-    android:background="#000"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="#000"
+
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin">
 
         <ImageView
             android:id="@+id/backdrop_id"
             android:layout_width="match_parent"
             android:layout_height="165dp"
-            android:src="@drawable/poster_a_start_is_born"
-            android:scaleType="fitXY"
             android:contentDescription="backdrop poster"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="fitXY"
+            android:src="@drawable/poster_a_start_is_born"
             android:tint="@color/poster_banner_tint"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardviewPosterDetail"
@@ -82,11 +79,25 @@
             tools:text="@string/test" />
 
         <TextView
+            android:id="@+id/genre_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="8dp"
+            android:textColor="#fff"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/date_id"
+            tools:text="GENRE ID ID ID" />
+
+        <TextView
             android:id="@+id/desc_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
             android:layout_marginTop="30dp"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:textColor="#fff"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,17 +105,32 @@
             app:layout_constraintTop_toBottomOf="@+id/cardviewPosterDetail"
             tools:text="@string/test" />
 
-
-        <TextView
+        <RatingBar
             android:id="@+id/rating_id"
-            android:layout_width="match_parent"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="160dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
+            android:stepSize="0.01"
             android:textColor="#fff"
             android:textSize="12sp"
+            android:theme="@style/RatingBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/date_id"
+            app:layout_constraintTop_toBottomOf="@id/genre_id"
             tools:text="@string/test" />
+
+        <TextView
+            android:id="@+id/rating_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="240dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/duskYellow"
+            android:textSize="12sp"
+            app:layout_constraintLeft_toRightOf="@id/rating_id"
+            app:layout_constraintTop_toBottomOf="@id/genre_id"
+            tools:text="@string/test" />
+
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
