--- a/app/src/main/res/layout/detail_tvshows.xml
+++ b/app/src/main/res/layout/detail_tvshows.xml
@@ -6,14 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin">
 
         <ImageView
@@ -78,29 +76,33 @@
             app:layout_constraintTop_toBottomOf="@+id/language_id"
             tools:text="@string/test" />
 
-        <TextView
-            android:id="@+id/pop_id"
-            android:layout_width="match_parent"
+
+
+        <RatingBar
+            android:id="@+id/rating_id"
+            style="@style/Widget.AppCompat.RatingBar.Small"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title_id"
             android:layout_marginStart="160dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="8dp"
+            android:stepSize="0.01"
             android:textColor="#fff"
             android:textSize="12sp"
+            android:theme="@style/RatingBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/startDate_id"
+            app:layout_constraintTop_toBottomOf="@id/genre_id"
             tools:text="@string/test" />
 
         <TextView
-            android:id="@+id/rating_id"
+            android:id="@+id/rating_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="160dp"
-            android:layout_marginTop="10dp"
-            android:textColor="#fff"
+            android:layout_marginLeft="240dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/duskYellow"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pop_id"
+            app:layout_constraintLeft_toRightOf="@id/rating_id"
+            app:layout_constraintTop_toBottomOf="@id/genre_id"
             tools:text="@string/test" />
 
         <TextView
@@ -117,7 +119,20 @@
             tools:text="@string/test" />
 
         <TextView
+            android:id="@+id/genre_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="160dp"
+            android:layout_marginTop="10dp"
+            android:textColor="#fff"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/startDate_id"
+            tools:text="@string/test" />
+        <TextView
             android:id="@+id/desc_id"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
