--- a/app/src/main/res/xml/favourite_widget_info.xml
+++ b/app/src/main/res/xml/favourite_widget_info.xml
@@ -2,8 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/favourite_widget"
     android:initialLayout="@layout/favourite_widget"
-    android:minWidth="250dp"
-    android:minHeight="180dp"
+    android:minWidth="100dp"
+    android:minHeight="70dp"
     android:previewImage="@drawable/logo"
     android:updatePeriodMillis="0"
+    android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen"></appwidget-provider>
